--- a/emma2.html
+++ b/emma2.html
@@ -17,8 +17,8 @@
 
 <div id="aha">
 <a href="books.html" id="books"> Books </a>
-<a href="About.html" id="about" class="active"> About </a>
-<a href="emma2.html" id="emma"> Emma's Section </a>
+<a href="About.html" id="about"> About </a>
+<a href="emma2.html" id="emma" class="active"> Emma's Section </a>
 </div>
 </nav>
 
