--- a/About.html
+++ b/About.html
@@ -38,6 +38,8 @@ Hi, I’m Jenny. I spent more money that I willing to admit to
 on books in the first lockdown. I’m also studying Web Development & 
 Design at university. Additionally unemployed, so I brought all three 
 of my traits into one website. 
+  <br> 
+  Have any recommendations on books I should look at: Message me on <a href="https://www.instagram.com/jennykclark/"> Instagram.</a>  
 </p>
 </div>
 
